[package]
name = "lazy-mut"
version = "0.2.1"
edition = "2021"
authors = ["Vrtgs"]
license = "MIT OR Apache-2.0"
description = "Alternative to LazyLock<Mutex<T>>"
repository = "https://github.com/Vrtgs/lazy-mut"
documentation = "https://docs.rs/lazy-mut"

[features]
default = ["parking_lot", "std"]
parking_lot = ["dep:parking_lot", "std"]
spin = ["dep:spin"]
std = ["lock_api/default"]

[dependencies]
cfg-if = "1.0.0"
lock_api = { version = "0.4.12", default-features = false }
spin = { version = "0.9.8", features = ["lock_api"], optional = true }
parking_lot = { version = "0.12.3", optional = true }
